# discount-analyst

./: .cursorindexingignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  LICENSE  Makefile  README.md  check_schema_keys.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  pyrightconfig.json  pytest.ini  tach.toml
.agent/rules/: conda-env.md  poetry-preference.md  pydantic-ai-docs.md
.cursor/: hooks.json  mcp.json
.cursor/agents/: architect.md  build-fixer-low.md  build-fixer-medium.md  critic.md  executor-high.md  executor-low.md  executor-medium.md  explore-low.md  explore-medium.md  planner.md
.cursor/hooks/: after-file-edit.sh  session-start.sh
.cursor/rules/: compatibility-surface-gate.mdc  plan-handoff-standard.mdc  pydantic-ai-docs.mdc  python-guidelines.mdc  python_guidelines.mdc  rich.mdc
.cursor/skills/analyse-workflow-run/: SKILL.md
.cursor/skills/deep-interview/: SKILL.md
.cursor/skills/ralplan/: SKILL.md
.github/: AGENTS.md  pull_request_template.md
.github/actions/: AGENTS.md
.github/workflows/: AGENTS.md  ci.yml  pr_checklist.yml  pull_request_checklist.yml  run_pre-commit.yml  run_pyrefly.yml  run_pyright.yml  run_pytest.yml
backend/: AGENTS.md  __init__.py  deps.py
backend/app/: __init__.py  main.py
backend/common/: primitive_types.py
backend/contracts/: __init__.py  agent_lane_order.py  agents.py  api.py  enums.py  stock_run_args.py  workflow_rows.py
backend/crud/: __init__.py  agent_output_persistence.py  candidate_snapshots.py  conversations.py  db_utils.py  repository.py  run_executions.py  unit_of_work.py  workflow_runs.py
backend/db/: __init__.py  alembic.ini  migrate.py  models.py  seed.py  session.py  verify_schema.py
backend/db/alembic/: env.py
backend/dev/: __init__.py  mock_conversation_messages.py  mock_outputs.py
backend/docker/: Dockerfile  entrypoint.sh
backend/migrations/: alembic.ini  env.py
backend/observability/: logging.py
backend/pipeline/: __init__.py  agent_errors.py  llm_config.py  ports.py  sqlmodel_runner.py
backend/routers/: __init__.py  agents.py  portfolio.py  workflow_runs.py
backend/serialisation/: workflows.py
backend/services/agent_terminal/: Dockerfile.sandbox  Dockerfile.service  pyproject.toml
backend/services/agent_terminal/app/: __main__.py
backend/settings/: __init__.py  config.py  testing.py
backend/tests/: AGENTS.md  conftest.py
backend/tools/: build_strategist_issue_focused_digest.py  check_alembic_schema.py  export_dashboard_openapi.py  verify_agent_terminal.py
common/: config.py
dashboards/mcp_tools/: AGENTS.md
discount_analyst/: AGENTS.md  rating.py
discount_analyst/agents/: AGENTS.md  __init__.py
discount_analyst/appraiser/: AGENTS.md  appraiser.py  data_types.py  system_prompt.py  user_prompt.py
discount_analyst/assumption_maker/: __init__.py  assumption_maker.py  data_types.py  system_prompt.py  user_prompt.py
discount_analyst/config/: AGENTS.md  __init__.py  ai_models_config.py  provider_features.py  settings.py
discount_analyst/data_fetcher/: __init__.py  constants.py  data_fetcher.py  data_types.py
discount_analyst/dcf_analysis/: AGENTS.md  __init__.py  data_types.py  dcf_analysis.py  types.py
discount_analyst/http/: AGENTS.md  __init__.py  retrying_client.py
discount_analyst/integrations/: AGENTS.md  __init__.py  blacklisted_mcp_toolset.py  bounded_web_search.py  eodhd_client.py  financial_data_mcp.py  fmp_client.py  infallible_toolset.py  mcp_tool_blacklist.py  perplexity.py  terminal.py  text_only_web_fetch.py
discount_analyst/market_analyst/: AGENTS.md  data_types.py  market_analyst.py  system_prompt.py
discount_analyst/models/: AGENTS.md  model_name.py
discount_analyst/pipeline/: AGENTS.md  __init__.py  builders.py  candidate_gates.py  rating_decision_table.py  schema.py
discount_analyst/rating/: __init__.py  investment_rating.py  margin_of_safety.py  valuation_result.py
discount_analyst/shared/: AGENTS.md  __init__.py  ai_models_config.py  config.py  data_types.py  model.py  rate_limit_client.py  settings.py
discount_analyst/surveyor/: AGENTS.md  data_types.py  surveyor.py  system_prompt.py  user_prompt.py
discount_analyst/valuation/: AGENTS.md  __init__.py  data_types.py  dcf_analysis.py
discount_analyst/workflows/: AGENTS.md  __init__.py  run_surveyor_researcher_strategist.py  run_surveyor_then_researcher.py
docker/agent-terminal/: Dockerfile.sandbox  Dockerfile.service  README.md  requirements-sandbox.txt  requirements-service.txt
frontend/: AGENTS.md  Dockerfile  eslint.config.js  index.html  openapi.json  orval.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts  vitest.config.ts
frontend/src/: App.tsx  index.css  vite-env.d.ts
scripts/: AGENTS.md  check_alembic_schema.py  export_dashboard_openapi.py  md_docs_parser.py  run_dcf_analysis.py  run_surveyor.py  shared.py  verify_agent_terminal.py
scripts/agents/: run_appraiser.py  run_arbiter.py  run_dcf_analysis.py  run_researcher.py  run_sentinel.py  run_strategist.py  run_surveyor.py
scripts/common/: AGENTS.md  __init__.py  artefacts.py  artifacts.py  cli.py  constants.py  cost.py  run_outputs.py  usage.py
scripts/cost_comparison/: AGENTS.md  batch_tier_costs.csv  model_cost_comparison.py  scatter_plot.py  shared.py  view_ticker_results.py
scripts/docker/: compose-up-prod.sh  compose-up.sh
scripts/mcp/: AGENTS.md  curated_tool_list.json  dashboard.py  fetch_mcp_tool_list.py  tool_list.json
scripts/shared/: AGENTS.md  __init__.py  appraiser_run_context.py  artefacts.py  cli.py  constants.py  cost.py  outputs.py  run_outputs.py  usage.py
scripts/utils/: setup_logfire.py
scripts/workflows/: AGENTS.md  run_full_workflow.py  run_surveyor_researcher_strategist.py  run_surveyor_then_researcher.py  run_surveyor_to_appraiser.py  run_surveyor_to_arbiter.py  run_surveyor_to_sentinel.py
tests/: AGENTS.md  conftest.py
tests/backend/: conftest.py
tests/data_fetcher/: test_data_fetcher.py
tests/dcf_analysis/: AGENTS.md  test_dcf_analysis.py
tests/scripts/: test_run_arbiter_resolve.py
(+1493 files in other folders)
