[project]
name = "discount_analyst"
version = "0.1.0"
description = "An AI-powered stock analysis tool. It was named 'Discount Analyst' because it is intended to be a cheap stock analysis tool."
authors = [
    {name = "Samuel Harris",email = "samuel.matsuo.harris@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "pydantic (>=2.12.3,<3.0.0)",
    "yfinance (>=0.2.66,<0.3.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "perplexityai (>=0.22.0,<0.23.0)",
    "aiolimiter (>=1.2.1,<2.0.0)",
    "pydantic-ai (>=1.27.0,<2.0.0)",
    "logfire (>=4.16.0,<5.0.0)",
    "markdownify (>=1.2.2,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "rich (>=14.2.0,<15.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=8.4.2,<9.0.0)",
    "pytest-cov (>=7.0.0,<8.0.0)",
    "ruff (>=0.14.2,<0.15.0)",
    "pre-commit (>=4.3.0,<5.0.0)",
    "pyrefly (>=0.42.2,<0.43.0)",
    "pandas-stubs (>=2.3.2.250926,<3.0.0.0)",
    "marimo (>=0.18.3,<0.19.0)",
]

[tool.pyrefly]
python-version = "3.14.0"
project-includes = [
    "discount_analyst/",
    "scripts/",
    "tests/",
]
infer-with-first-use = false
untyped-def-behavior = "check-and-infer-return-type"
