[project]
name = "discount-analyst-agent-terminal"
version = "0.1.0"
description = "Privileged agent-terminal orchestrator (Docker sandboxes)."
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi>=0.115.0,<1.0.0",
    "uvicorn[standard]>=0.30.0,<1.0.0",
    "docker>=7.1.0,<8.0.0",
    "pydantic>=2.12.3,<3.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
